base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx-private
  tls:
  - hosts:
    - prometheus.apps-stage.in.hinisoft.com
    secretName: prometheus-tls
  rules:
  - host: prometheus.apps-stage.in.hinisoft.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
